# aws-sam-testing

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yml  test-build.yml
aws_sam_testing/: aws_resources.py  aws_sam.py  cfn.py  localstack.py
aws_sam_testing/pytest/: aws_resources.py
aws_sam_testing/pytest_addin/: aws_context.py  aws_localstack.py  aws_sam.py
examples/01_moto_tests_with_resources/: pyproject.toml  template.yaml
examples/01_moto_tests_with_resources/api_handler/: app.py
examples/01_moto_tests_with_resources/tests/: test_api_handler.py
sam_mocks/: aws_sam.py  cfn.py  core.py
test_stacks/api_with_postgres_localstack/: template.yaml  test_api_with_postgres_localstack.py
test_stacks/api_with_postgres_localstack/api_handler/: app.py  database.py
test_stacks/api_with_postgres_moto_isolation_resources/: template.yaml  test_api_with_postgres_moto_isolation_resources.py
test_stacks/api_with_postgres_moto_isolation_resources/api_handler/: app.py
test_stacks/localstack/api_with_postgres/: test_stack.py
test_stacks/localstack/api_with_postgres/api_handler/: app.py
test_stacks/localstack_lambda_with_layers/handler/: app.py
test_stacks/localstack_simple_api/: template.yaml  test_localstack_simple_api.py
test_stacks/localstack_simple_api/handler/: app.py
test_stacks/simple_api/: test_stack_simple_api.py
test_stacks/simple_api_moto_isolation_resources/: test_stack_simple_api_moto_isolation_resources.py
test_stacks/simple_api_moto_isolation_resources/api_handler/: app.py
test_stacks/two_apis/: test_stack_two_apis.py
tests/: conftest.py  test_aws_resources.py  test_aws_sam.py  test_cfn.py  test_cfn_find_methods.py  test_fixtures.py  test_localstack.py  test_moto.py  test_moto_server.py  test_sam_cli.py
tests/pytest_addin/: test_aws_context.py
