[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "sam-mocks"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-sam-cli>=1.139.0",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.pyright]
include = ["sam_mocks"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning',
    'ignore:get_errors is deprecated and will be removed in a future release:DeprecationWarning',
    'ignore:jsonschema.RefResolver is deprecated as of.*:DeprecationWarning',
    'ignore:__init__ is deprecated and will be removed in a future release:DeprecationWarning',
    'ignore:validate is deprecated and will be removed in a future release:DeprecationWarning',
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
